# cloover_track_energy_advisor

./: .gitignore  CLAUDE.md  Makefile  PHASED_PLAN.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: .env.example  CLAUDE.md  pyproject.toml
apps/backend/data/: goal.md  hackathon_track.md  layers.md
apps/backend/fixtures/: nahholz-buchen.json
apps/backend/src/app/: __init__.py  main.py
apps/backend/src/app/adapters/irradiance/: provider.py
apps/backend/src/app/adapters/llm/: claude.py  stub.py
apps/backend/src/app/api/routes/: advisor.py  permits.py  subsidies.py
apps/backend/src/app/core/: __init__.py  config.py
apps/backend/src/app/domain/: __init__.py  models.py
apps/backend/src/app/domain/savings/: engine.py  financing.py  mobility.py  options.py  scenarios.py
apps/backend/src/app/domain/savings/permit_layer/: INFO.md  __init__.py  checks.py  engine.py
apps/backend/src/app/domain/savings/solar_layer/: INFO.md  __init__.py  (+6 more)
apps/backend/src/app/jobs/: __init__.py  seed_mastr.py
apps/backend/src/app/services/: recommendation.py
apps/backend/supabase/.temp/: linked-project.json  pooler-url  project-ref
apps/backend/supabase/migrations/: 20260621000000_permit_tables.sql
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_health.py  test_permits.py
apps/backend/tests/unit/: conftest.py
apps/backend/tests/unit/adapters/: test_supabase_catalog.py
apps/backend/tests/unit/domain/: test_domain_spec_vectors.py  test_intake.py  test_permit_checks.py  test_subsidy_catalog.py  test_subsidy_crawler.py
(+116 files in other folders)
